--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/sshifty/battleship#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.16.0",
+    "css-loader": "^6.5.1",
     "jest": "^27.3.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.63.0",
     "webpack-cli": "^4.9.1"
   }
